updated font path

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,13 +38,13 @@ $typewriter-font: 'Typewriter', monospace; // Main font
 // Custom font faces for retro look
 @font-face {
   font-family: 'Typewriter';
-  src: url('../docs/assets/typewriter.ttf') format('truetype');
+  src: url('./assets/typewriter.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'GothicPixel';
-  src: url('../docs/assets/OldEnglishGothicPixelRegular-gx1jp.woff') format('woff');
+  src: url('./assets/OldEnglishGothicPixelRegular-gx1jp.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -276,7 +276,7 @@ $terminal-btn-bg-active: $accent;
   inset: 0;
   z-index: 0;
   pointer-events: none;
-  background: url('../docs/assets/static.gif') center center/cover no-repeat;
+  background: url('./assets/static.gif') center center/cover no-repeat;
   animation: none;
   mask-image: none;
 }
