i love asset confg

--- a/src/App.scss
+++ b/src/App.scss
@@ -322,7 +322,7 @@ $terminal-btn-bg-active: $accent;
   inset: 0;
   z-index: 0;
   pointer-events: none;
-  background: url('./assets/static.gif') center center/cover no-repeat;
+  background: url('.docs/assets/static.gif') center center/cover no-repeat;
   animation: none;
   mask-image: none;
   opacity: 50%;
