--- a/src/App.scss
+++ b/src/App.scss
@@ -59,7 +59,7 @@ $gothic-font: 'GothicPixel', $typewriter-font;
 // Custom font faces for retro look
 @font-face {
   font-family: 'Typewriter';
-  src: url('../docs/assets/typewriter.ttf') format('truetype');
+  src: url('assets/typewriter.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -322,7 +322,7 @@ $terminal-btn-bg-active: $accent;
   inset: 0;
   z-index: 0;
   pointer-events: none;
-  background: url('.docs/assets/static.gif') center center/cover no-repeat;
+  background: url('assets/static.gif') center center/cover no-repeat;
   animation: none;
   mask-image: none;
   opacity: 50%;
